crates/schema/tests/compile_fail/field_key_from_str_removed.rs
use nebula_schema::FieldKey;

fn main() {
    // Should not compile — From<&'static str> is removed
    let _: FieldKey = "alpha".into();
}
